# moos-ivp-ironsdr

./: CMakeLists.txt
log/: latest_list
missions/alder/: alder.bhv  alder.moos
missions/unmaned_boat/: alpha.bhv
src/: CMakeLists.txt
src/pNMEAUDPReceiver/: CMakeLists.txt  NMEAUDPReceiver.cpp  NMEAUDPReceiver.h  NMEAUDPReceiver_Info.cpp  NMEAUDPReceiver_Info.h  main.cpp  pNMEAUDPReceiver.moos
src/pNMEAUDPSender/: CMakeLists.txt  NMEAUDPSender.cpp  NMEAUDPSender.h  NMEAUDPSender_Info.cpp  NMEAUDPSender_Info.h  main.cpp  pNMEAUDPSender.moos
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
src/pXRelayTest/: Relayer.cpp
